--- a/leauge2(4team).html
+++ b/leauge2(4team).html
@@ -12,10 +12,10 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
 
   <script type="text/javascript">
-    var team1 = 'GRIMMREAPER and akindrevolution'; 1
-    var team2 = 'Papasmurf and MyGuyRyy';
-    var team3 = 'miss_andy and Dropjack';
-    var team4 = 'MrLockets and Kayvaana';
+    var team1 = 'McMuffin and Mental Magicz';
+    var team2 = 'SenseiAli and Annie';
+    var team3 = 'JiveNinja and Mini';
+    var team4 = 'GRIMMREAPER and Ash';
 
 //Team 1
     var Match1_team1_points =0;
@@ -100,7 +100,7 @@
   <!-- Leauge 1 Headline -->
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
-      <h2 class="header center black-text"> Leauge 3</h2>
+      <h2 class="header center black-text"> Leauge 2</h2>
     </div>
   </div>
 
