--- a/leauge1.html
+++ b/leauge1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta http-equiv="refresh" content="5s">
+  <meta http-equiv="refresh" content="300">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
   <title>The Federation</title>
@@ -65,28 +65,6 @@
     var team1_total_kills = Match1_team1_kills + Match2_team1_kills + Match5_team1_kills + Match6_team1_kills;
     var team2_total_kills = Match1_team2_kills + Match2_team2_kills + Match3_team2_kills + Match4_team2_kills;
     var team3_total_kills = Match3_team3_kills + Match4_team3_kills + Match5_team3_kills + Match6_team3_kills;
-
-    function lastModified() {
-        var modiDate = new Date(document.lastModified);
-        var showAs = modiDate.getDate() + "-" + (modiDate.getMonth() + 1) + "-" + modiDate.getFullYear();
-        return showAs
-    }
-
-    function GetTime() {
-        var modiDate = new Date();
-        var Seconds
-
-        if (modiDate.getSeconds() < 10) {
-            Seconds = "0" + modiDate.getSeconds();
-        } else {
-            Seconds = modiDate.getSeconds();
-        }
-
-        var modiDate = new Date();
-        var CurTime = modiDate.getHours() + ":" + modiDate.getMinutes() + ":" + Seconds
-        return CurTime
-    }
-
   </script>
 </head>
 
@@ -121,23 +99,11 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <h2 class="header center black-text"> Leauge 1</h2>
-      <p class="center">  <script type="text/javascript"> document.write("Last updated: " + document.lastModified);</script></p>
-      <p class="center"><script type="text/javascript">
-      document.write("Last updated on ")
-      document.write(lastModified() + " @ " + GetTime());
-      document.write(" [D M Y 24 Hour Clock]")
-      document.write("");
-      </script>
-</p>
-
-This is last updated time <span id="demo"></span>
-
-<script>
-  function myFunction() {
-    var x = document.lastModified;
-    document.getElementById("demo").innerHTML = x;
-  }
-</script>
+      <p class="center">
+        <script type="text/javascript">
+          document.write("Last updated: " + document.lastModified);
+        </script>
+      </p>
     </div>
   </div>
 
@@ -321,80 +287,80 @@ This is last updated time <span id="demo"></span>
 
 
 
-  <!--   Match 2   -->
-  <div class="col s12 m6">
-    <h5 class="center">Match 2 <br> </h5>
-    <h6 class="center">
-      <script>
-        document.write(team3)
-      </script> - Waiting
-    </h6>
-    <div class="section">
-      <div class="customBox">
-        <table class="striped highlight">
-          <thead>
-            <tr>
-              <th></th>
-              <th>Host</th>
-              <th>Joining</th>
-            </tr>
-          </thead>
+        <!--   Match 2   -->
+        <div class="col s12 m6">
+          <h5 class="center">Match 2 <br> </h5>
+          <h6 class="center">
+            <script>
+              document.write(team3)
+            </script> - Waiting
+          </h6>
+          <div class="section">
+            <div class="customBox">
+              <table class="striped highlight">
+                <thead>
+                  <tr>
+                    <th></th>
+                    <th>Host</th>
+                    <th>Joining</th>
+                  </tr>
+                </thead>
 
-          <tbody>
-            <tr>
-              <th>Team</th>
-              <td>
-                <script>
-                  document.write(team2)
-                </script>
-              </td>
-              <td>
-                <script>
-                  document.write(team1)
-                </script>
-              </td>
-            </tr>
-            <tr>
-              <th>Points</th>
-              <td>
-                <script>
-                  document.write(Match2_team2_points)
-                </script>
-                </p>
-              </td>
-              <td>
-                <script>
-                  document.write(Match2_team1_points)
-                </script>
-                </p>
-              </td>
-            </tr>
-            <tr>
-              <th>Kills</th>
-              <td>
-                <script>
-                  document.write(Match2_team2_kills)
-                </script>
-                </p>
-              </td>
-              <td>
-                <script>
-                  document.write(Match2_team1_kills)
-                </script>
-                </p>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        <br>
-      </div>
-    </div>
-  </div>
+                <tbody>
+                  <tr>
+                    <th>Team</th>
+                    <td>
+                      <script>
+                        document.write(team2)
+                      </script>
+                    </td>
+                    <td>
+                      <script>
+                        document.write(team1)
+                      </script>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>Points</th>
+                    <td>
+                      <script>
+                        document.write(Match2_team2_points)
+                      </script>
+                      </p>
+                    </td>
+                    <td>
+                      <script>
+                        document.write(Match2_team1_points)
+                      </script>
+                      </p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>Kills</th>
+                    <td>
+                      <script>
+                        document.write(Match2_team2_kills)
+                      </script>
+                      </p>
+                    </td>
+                    <td>
+                      <script>
+                        document.write(Match2_team1_kills)
+                      </script>
+                      </p>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+              <br>
+            </div>
+          </div>
+        </div>
 
-  <!-- Round 2 header -->
-  <div class="row center">
-    <h3 class="header col s12 ">Round 2</h3>
-  </div>
+        <!-- Round 2 header -->
+        <div class="row center">
+          <h3 class="header col s12 ">Round 2</h3>
+        </div>
 
 
         <!--   Match 3   -->
@@ -539,7 +505,7 @@ This is last updated time <span id="demo"></span>
 
 
 
-  <!-- Round 3 header -->
+        <!-- Round 3 header -->
 
         <div class="row center">
           <h3 class="header col s12 ">Round 3</h3>
@@ -686,11 +652,10 @@ This is last updated time <span id="demo"></span>
         </div>
 
 
-    <!--  Scripts-->
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="js/materialize.js"></script>
-    <script src="js/init.js"></script>
-    <script type="text/javascript" src="js/time_stamp.js"></script>
+        <!--  Scripts-->
+        <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="js/materialize.js"></script>
+        <script src="js/init.js"></script>
 
 </body>
 
