--- a/leauge2.html
+++ b/leauge2.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta http-equiv="refresh" content="300">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
   <title>The Federation</title>
@@ -98,6 +99,11 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <h2 class="header center black-text"> Leauge 2</h2>
+      <p class="center">
+        <script type="text/javascript">
+          document.write("Last updated: " + document.lastModified);
+        </script>
+      </p>
     </div>
   </div>
 
@@ -281,80 +287,80 @@
 
 
 
-  <!--   Match 2   -->
-  <div class="col s12 m6">
-    <h5 class="center">Match 2 <br> </h5>
-    <h6 class="center">
-      <script>
-        document.write(team3)
-      </script> - Waiting
-    </h6>
-    <div class="section">
-      <div class="customBox">
-        <table class="striped highlight">
-          <thead>
-            <tr>
-              <th></th>
-              <th>Host</th>
-              <th>Joining</th>
-            </tr>
-          </thead>
+        <!--   Match 2   -->
+        <div class="col s12 m6">
+          <h5 class="center">Match 2 <br> </h5>
+          <h6 class="center">
+            <script>
+              document.write(team3)
+            </script> - Waiting
+          </h6>
+          <div class="section">
+            <div class="customBox">
+              <table class="striped highlight">
+                <thead>
+                  <tr>
+                    <th></th>
+                    <th>Host</th>
+                    <th>Joining</th>
+                  </tr>
+                </thead>
 
-          <tbody>
-            <tr>
-              <th>Team</th>
-              <td>
-                <script>
-                  document.write(team2)
-                </script>
-              </td>
-              <td>
-                <script>
-                  document.write(team1)
-                </script>
-              </td>
-            </tr>
-            <tr>
-              <th>Points</th>
-              <td>
-                <script>
-                  document.write(Match2_team2_points)
-                </script>
-                </p>
-              </td>
-              <td>
-                <script>
-                  document.write(Match2_team1_points)
-                </script>
-                </p>
-              </td>
-            </tr>
-            <tr>
-              <th>Kills</th>
-              <td>
-                <script>
-                  document.write(Match2_team2_kills)
-                </script>
-                </p>
-              </td>
-              <td>
-                <script>
-                  document.write(Match2_team1_kills)
-                </script>
-                </p>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        <br>
-      </div>
-    </div>
-  </div>
+                <tbody>
+                  <tr>
+                    <th>Team</th>
+                    <td>
+                      <script>
+                        document.write(team2)
+                      </script>
+                    </td>
+                    <td>
+                      <script>
+                        document.write(team1)
+                      </script>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>Points</th>
+                    <td>
+                      <script>
+                        document.write(Match2_team2_points)
+                      </script>
+                      </p>
+                    </td>
+                    <td>
+                      <script>
+                        document.write(Match2_team1_points)
+                      </script>
+                      </p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>Kills</th>
+                    <td>
+                      <script>
+                        document.write(Match2_team2_kills)
+                      </script>
+                      </p>
+                    </td>
+                    <td>
+                      <script>
+                        document.write(Match2_team1_kills)
+                      </script>
+                      </p>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+              <br>
+            </div>
+          </div>
+        </div>
 
-  <!-- Round 2 header -->
-  <div class="row center">
-    <h3 class="header col s12 ">Round 2</h3>
-  </div>
+        <!-- Round 2 header -->
+        <div class="row center">
+          <h3 class="header col s12 ">Round 2</h3>
+        </div>
 
 
         <!--   Match 3   -->
@@ -499,7 +505,7 @@
 
 
 
-  <!-- Round 3 header -->
+        <!-- Round 3 header -->
 
         <div class="row center">
           <h3 class="header col s12 ">Round 3</h3>
@@ -643,13 +649,13 @@
               <br>
             </div>
           </div>
-              </div>
+        </div>
 
 
-    <!--  Scripts-->
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="js/materialize.js"></script>
-    <script src="js/init.js"></script>
+        <!--  Scripts-->
+        <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="js/materialize.js"></script>
+        <script src="js/init.js"></script>
 
 </body>
 
