--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
     <div class="nav-wrapper container"><a id="logo-container" href="index.html" class="brand-logo">The Federation</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html">Home</a></li>
-        <li><a href="leauge1.html">Leauge 1</a></li>
-        <li><a href="leauge2.html">Leauge 2</a></li>
-        <li><a href="leauge3.html">Leauge 3</a></li>
-        <li><a href="leauge4.html">Leauge 4</a></li>
+        <li><a href="League 1.html">League  1</a></li>
+        <li><a href="League 2.html">League  2</a></li>
+        <li><a href="League 3.html">League  3</a></li>
+        <li><a href="League 4.html">League  4</a></li>
       </ul>
       </ul>
 
 <!-- Mobile nav bar -->
       <ul id="nav-mobile" class="sidenav">
         <li><a href="index.html">Home</a></li>
-        <li><a href="leauge1.html">Leauge 1</a></li>
-        <li><a href="leauge2.html">Leauge 2</a></li>
-        <li><a href="leauge3.html">Leauge 3</a></li>
-        <li><a href="leauge4.html">Leauge 4</a></li>
+        <li><a href="League 1.html">League  1</a></li>
+        <li><a href="League 2.html">League  2</a></li>
+        <li><a href="League 3.html">League  3</a></li>
+        <li><a href="League 4.html">League  4</a></li>
       </ul>
       </ul>
       <a data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
