--- a/league2.html
+++ b/league2.html
@@ -13,9 +13,9 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
 
   <script type="text/javascript">
-    var team1 = 'Lucie and PariisD';
-    var team2 = 'BainsleyHarriott and Loganoz';
-    var team3 = 'Marco_Bravo and iAMCxX';
+    var team1 = 'JiveNinja and Mini';
+    var team2 = 'McMuffin and Mental Magicz';
+    var team3 = 'SenseiAli and Annie';
 
 
     //Team 1
@@ -68,37 +68,37 @@
   </script>
 </head>
 
-<body onload="myFunction()">
+<body>
 
   <!-- Web nav bar -->
   <nav class="fed-red" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">The Federation</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html">Home</a></li>
-        <li><a href="leauge1.html">Leauge 1</a></li>
-        <li><a href="leauge2.html">Leauge 2</a></li>
-        <li><a href="leauge3.html">Leauge 3</a></li>
-        <li><a href="leauge4.html">Leauge 4</a></li>
+        <li><a href="League 1.html">League  1</a></li>
+        <li><a href="League 2.html">League  2</a></li>
+        <li><a href="League 3.html">League  3</a></li>
+        <li><a href="League 4.html">League  4</a></li>
       </ul>
       </ul>
 
       <!-- Mobile nav bar -->
       <ul id="nav-mobile" class="sidenav">
         <li><a href="index.html">Home</a></li>
-        <li><a href="leauge1.html">Leauge 1</a></li>
-        <li><a href="leauge2.html">Leauge 2</a></li>
-        <li><a href="leauge3.html">Leauge 3</a></li>
-        <li><a href="leauge4.html">Leauge 4</a></li>
+        <li><a href="League 1.html">League  1</a></li>
+        <li><a href="League 2.html">League  2</a></li>
+        <li><a href="League 3.html">League  3</a></li>
+        <li><a href="League 4.html">League  4</a></li>
       </ul>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
   </nav>
 
-  <!-- Leauge 1 Headline -->
+  <!-- League  1 Headline -->
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
-      <h2 class="header center black-text"> Leauge 1</h2>
+      <h2 class="header center black-text"> League  2</h2>
       <p class="center">
         <script type="text/javascript">
           document.write("Last updated: " + document.lastModified);
