--- a/league3.html
+++ b/league3.html
@@ -13,10 +13,11 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
 
   <script type="text/javascript">
-    var team1 = 'Jurd and HNDRNCE';
-    var team2 = 'willy-wonka and Nalin';
-    var team3 = 'Gaskin Bros and Jack2Slappy';
-    var team4 = 'RedDog90 and PeterMcc';
+    var team1 = 'GRIMMREAPER and akindrevolution';
+    1
+    var team2 = 'Papasmurf and MyGuyRyy';
+    var team3 = 'miss_andy and Dropjack';
+    var team4 = 'MrLockets and Kayvaana';
 
     //Team 1
     var Match1_team1_points = 0;
@@ -78,30 +79,30 @@
     <div class="nav-wrapper container"><a id="logo-container" href="index.html" class="brand-logo">The Federation</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html">Home</a></li>
-        <li><a href="leauge1.html">Leauge 1</a></li>
-        <li><a href="leauge2.html">Leauge 2</a></li>
-        <li><a href="leauge3.html">Leauge 3</a></li>
-        <li><a href="leauge4.html">Leauge 4</a></li>
+        <li><a href="League 1.html">League  1</a></li>
+        <li><a href="League 2.html">League  2</a></li>
+        <li><a href="League 3.html">League  3</a></li>
+        <li><a href="League 4.html">League  4</a></li>
       </ul>
       </ul>
 
       <!-- Mobile nav bar -->
       <ul id="nav-mobile" class="sidenav">
         <li><a href="index.html">Home</a></li>
-        <li><a href="leauge1.html">Leauge 1</a></li>
-        <li><a href="leauge2.html">Leauge 2</a></li>
-        <li><a href="leauge3.html">Leauge 3</a></li>
-        <li><a href="leauge4.html">Leauge 4</a></li>
+        <li><a href="League 1.html">League  1</a></li>
+        <li><a href="League 2.html">League  2</a></li>
+        <li><a href="League 3.html">League  3</a></li>
+        <li><a href="League 4.html">League  4</a></li>
       </ul>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
   </nav>
 
-  <!-- Leauge 1 Headline -->
+  <!-- League  1 Headline -->
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
-      <h2 class="header center black-text"> Leauge 4</h2>
+      <h2 class="header center black-text"> League  3</h2>
       <p class="center">
         <script type="text/javascript">
           document.write("Last updated: " + document.lastModified);
