--- a/league3.html
+++ b/league3.html
@@ -79,20 +79,20 @@
     <div class="nav-wrapper container"><a id="logo-container" href="index.html" class="brand-logo">The Federation</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html">Home</a></li>
-        <li><a href="League 1.html">League  1</a></li>
-        <li><a href="League 2.html">League  2</a></li>
-        <li><a href="League 3.html">League  3</a></li>
-        <li><a href="League 4.html">League  4</a></li>
+        <li><a href="league1.html">League 1</a></li>
+        <li><a href="league2.html">League 2</a></li>
+        <li><a href="league3.html">League 3</a></li>
+        <li><a href="league4.html">League 4</a></li>
       </ul>
       </ul>
 
       <!-- Mobile nav bar -->
       <ul id="nav-mobile" class="sidenav">
         <li><a href="index.html">Home</a></li>
-        <li><a href="League 1.html">League  1</a></li>
-        <li><a href="League 2.html">League  2</a></li>
-        <li><a href="League 3.html">League  3</a></li>
-        <li><a href="League 4.html">League  4</a></li>
+        <li><a href="league1.html">League 1</a></li>
+        <li><a href="league2.html">League 2</a></li>
+        <li><a href="league3.html">League 3</a></li>
+        <li><a href="league4.html">League 4</a></li>
       </ul>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -102,7 +102,7 @@
   <!-- League  1 Headline -->
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
-      <h2 class="header center black-text"> League  3</h2>
+      <h2 class="header center black-text"> League 3</h2>
       <p class="center">
         <script type="text/javascript">
           document.write("Last updated: " + document.lastModified);
