--- a/league4.html
+++ b/league4.html
@@ -20,7 +20,7 @@
 
     //Team 1
     var Match1_team1_points = 0;
-    var Match1_team1_kills = 0;
+    var Match1_team1_kills = 1;
 
     var Match3_team1_points = 0;
     var Match3_team1_kills = 0;
@@ -29,8 +29,8 @@
     var Match5_team1_kills = 0;
 
     //Team 2
-    var Match1_team2_points = 0;
-    var Match1_team2_kills = 0;
+    var Match1_team2_points = 2;
+    var Match1_team2_kills = 3 + 9;
 
     var Match4_team2_points = 0;
     var Match4_team2_kills = 0;
@@ -49,8 +49,8 @@
     var Match5_team3_kills = 0;
 
     //Team 4
-    var Match2_team4_points = 0;
-    var Match2_team4_kills = 0;
+    var Match2_team4_points = 2;
+    var Match2_team4_kills = 5 + 2;
 
     var Match3_team4_points = 0;
     var Match3_team4_kills = 0;
