--- a/league3.html
+++ b/league3.html
@@ -14,14 +14,13 @@
 
   <script type="text/javascript">
     var team1 = 'GRIMMREAPER and akindrevolution';
-    1
-    var team2 = 'Papasmurf and MyGuyRyy';
+    var team2 = 'Papasmurf and Ash';
     var team3 = 'miss_andy and Dropjack';
     var team4 = 'MrLockets and Kayvaana';
 
     //Team 1
-    var Match1_team1_points = 0;
-    var Match1_team1_kills = 0;
+    var Match1_team1_points = 2;
+    var Match1_team1_kills = 8;
 
     var Match3_team1_points = 0;
     var Match3_team1_kills = 0;
@@ -30,8 +29,8 @@
     var Match5_team1_kills = 0;
 
     //Team 2
-    var Match1_team2_points = 1;
-    var Match1_team2_kills = 2;
+    var Match1_team2_points = 0;
+    var Match1_team2_kills = 1;
 
     var Match4_team2_points = 0;
     var Match4_team2_kills = 0;
@@ -50,8 +49,8 @@
     var Match5_team3_kills = 0;
 
     //Team 4
-    var Match2_team4_points = 0;
-    var Match2_team4_kills = 0;
+    var Match2_team4_points = 1;
+    var Match2_team4_kills = 2;
 
     var Match3_team4_points = 0;
     var Match3_team4_kills = 0;
