--- a/league1.html
+++ b/league1.html
@@ -20,7 +20,7 @@
 
     //Team 1
     var Match1_team1_points = 0;
-    var Match1_team1_kills = 0;
+    var Match1_team1_kills = 4+3;
 
     var Match2_team1_points = 0;
     var Match2_team1_kills = 0;
@@ -32,8 +32,8 @@
     var Match6_team1_kills = 0;
 
     //Team 2
-    var Match1_team2_points = 0;
-    var Match1_team2_kills = 0;
+    var Match1_team2_points = 2;
+    var Match1_team2_kills = 5 +4 ;
 
     var Match2_team2_points = 0;
     var Match2_team2_kills = 0;
