--- a/league4.html
+++ b/league4.html
@@ -33,7 +33,7 @@
     var Match1_team2_kills = 3 + 9;
 
     var Match4_team2_points = 0;
-    var Match4_team2_kills = 0;
+    var Match4_team2_kills = 1;
 
     var Match6_team2_points = 0;
     var Match6_team2_kills = 0;
@@ -42,8 +42,8 @@
     var Match2_team3_points = 0;
     var Match2_team3_kills = 0;
 
-    var Match4_team3_points = 0;
-    var Match4_team3_kills = 0;
+    var Match4_team3_points = 2;
+    var Match4_team3_kills = 4+4;
 
     var Match5_team3_points = 0;
     var Match5_team3_kills = 0;
