--- a/league2.html
+++ b/league2.html
@@ -36,7 +36,7 @@
     var Match1_team2_kills = 6;
 
     var Match2_team2_points = 0;
-    var Match2_team2_kills = 0;
+    var Match2_team2_kills = 3+2;
 
     var Match4_team2_points = 0;
     var Match4_team2_kills = 0;
@@ -45,8 +45,8 @@
     var Match5_team2_kills = 0;
 
     //Team 3
-    var Match2_team3_points = 0;
-    var Match2_team3_kills = 0;
+    var Match2_team3_points = 2;
+    var Match2_team3_kills = 7;
 
     var Match3_team3_points = 0;
     var Match3_team3_kills = 0;
