--- a/league2.html
+++ b/league2.html
@@ -22,8 +22,8 @@
     var Match1_team1_points = 0;
     var Match1_team1_kills = 2;
 
-    var Match3_team1_points = 0;
-    var Match3_team1_kills = 0;
+    var Match3_team1_points = 2;
+    var Match3_team1_kills = 8+7;
 
     var Match5_team1_points = 0;
     var Match5_team1_kills = 0;
@@ -49,7 +49,7 @@
     var Match2_team3_kills = 7;
 
     var Match3_team3_points = 0;
-    var Match3_team3_kills = 0;
+    var Match3_team3_kills = 8;
 
     var Match4_team3_points = 0;
     var Match4_team3_kills = 0;
