--- a/league3.html
+++ b/league3.html
@@ -183,7 +183,7 @@
                 <tr>
                   <td>
                     <script>
-                      document.write(team4)
+                      document.write('<i class="material-icons">emoji_events</i><b>' + team4 + '</b>')
                     </script>
                   </td>
                   <td>
