--- a/league4.html
+++ b/league4.html
@@ -164,7 +164,7 @@
                 <tr>
                   <td>
                     <script>
-                      document.write('<i class="material-icons">emoji_events</i><b>' + team3 '</b>')
+                      document.write('<i class="material-icons">emoji_events</i><b>' + team4 + '</b>')
                     </script>
                   </td>
                   <td>
