--- a/league2.html
+++ b/league2.html
@@ -26,7 +26,7 @@
     var Match3_team1_kills = 8+7;
 
     var Match5_team1_points = 0;
-    var Match5_team1_kills = 0;
+    var Match5_team1_kills = 3;
 
     var Match6_team1_points = 0;
     var Match6_team1_kills = 0;
@@ -41,8 +41,8 @@
     var Match4_team2_points = 0;
     var Match4_team2_kills = 2;
 
-    var Match5_team2_points = 0;
-    var Match5_team2_kills = 0;
+    var Match5_team2_points = 2;
+    var Match5_team2_kills = 0; // NOTE: add kills!
 
     //Team 3
     var Match2_team3_points = 2;
