--- a/league1.html
+++ b/league1.html
@@ -41,8 +41,8 @@
     var Match3_team2_points = 2;
     var Match3_team2_kills = 1;
 
-    var Match5_team2_points = 0;
-    var Match5_team2_kills = 0;
+    var Match5_team2_points = 2;
+    var Match5_team2_kills = 4;
 
     //Team 3
     var Match3_team3_points = 0;
@@ -52,7 +52,7 @@
     var Match4_team3_kills = 0;
 
     var Match5_team3_points = 0;
-    var Match5_team3_kills = 0;
+    var Match5_team3_kills = 2;
 
     var Match6_team3_points = 2;
     var Match6_team3_kills = 1;
@@ -144,7 +144,7 @@
                 <tr>
                   <td>
                     <script>
-                      document.write(team2)
+                      document.write('<i class="material-icons">emoji_events</i><b>' + team2 + '</b>')
                     </script>
                   </td>
                   <td>
